// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.admin.v0;

import "com/digitalasset/canton/admin/domain/v30/sequencer_connection.proto";
import "google/protobuf/empty.proto";

// service used by sequencer clients to manage connection to the sequencer
// used by the mediator and domain manager nodes
service SequencerConnectionService {
  rpc GetConnection(GetConnectionRequest) returns (GetConnectionResponse);
  rpc SetConnection(SetConnectionRequest) returns (google.protobuf.Empty);
}

message GetConnectionRequest {}

message GetConnectionResponse {
  com.digitalasset.canton.admin.domain.v30.SequencerConnections sequencer_connections = 1; // optional
}

message SetConnectionRequest {
  com.digitalasset.canton.admin.domain.v30.SequencerConnections sequencer_connections = 1; // required
}
